chore: added assests

--- a/src/assets/scss/_theme.scss
+++ b/src/assets/scss/_theme.scss
@@ -10,6 +10,7 @@ $gray: rgb(63, 63, 63);
 $black: rgb(22, 22, 22);
 $success: green;
 $tetiaryColor: #ee6211;
+$danger: #ee3d11;
 $sm-font: 0.9rem;
 $sm-font-heading: 1.1rem;
 $box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11),
