--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,5 +1,6 @@
 @import './theme';
 @import './custom';
+@import './cart';
 
 * {
 	box-sizing: border-box;
@@ -11,6 +12,7 @@ html {
 	height: 100%;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	scroll-behavior: smooth;
 }
 
 body {
