--- a/src/assets/scss/_cart.scss
+++ b/src/assets/scss/_cart.scss
@@ -14,10 +14,9 @@
 		}
 	}
 	.close-cart {
-		display: none;
 		position: absolute;
 		right: 0;
-		top: 0;
+		top: 1rem;
 		margin: 0.5rem 2rem 0 0;
 		color: $primary;
 		font-weight: 600;
