--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -16,6 +16,18 @@ html {
 	scroll-behavior: smooth;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 body {
 	background-color: #f4f6f8;
 	height: 100%;
